k8/k8s-yamls/internaldeployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: demo-api
spec: 
  selector:
    matchLabels:
      app: demo-api
  replicas: 1 # tells deployment to run 1 pod matching the template
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
      - name: demo-api
        image: gcr.io/<project-id>/internal:v1.0.0
        ports:
        - containerPort: 8080
