k8/k8s-yamls/externalservice.yaml
apiVersion: v1 
kind: Service
metadata:
  name: demo-ui-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: demo-ui
  type: NodePort
