k8/k8s-yamls/internalservice.yaml
apiVersion: v1 
kind: Service
metadata:
  name: demo-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: demo-api
  type: NodePort
