k8/k8s-yamls/myingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: demo-ui-service
          servicePort: 80
      - path: /json/*
        backend:
          serviceName: demo-service
          servicePort: 80
